--- a/css/_cabecera.scss
+++ b/css/_cabecera.scss
@@ -4,6 +4,13 @@
     .menuInicio{
     padding: 1rem;
     background-color: $negro;
+    .contador{
+        
+        color: $menuCatColor;
+        &:hover{
+            text-decoration: underline;
+        }
+    }
     a{
         margin-left: 2rem;
         &:hover{
@@ -33,3 +40,37 @@
             }    
         }
     }
+
+ 
+.myModal-header{
+	padding:6px 10px 6px 20px;
+	background-color:$menuCatColor;
+	border:0px;
+	height:60px;
+}
+ 
+.myModal-body{
+	padding:5rem;
+	background-image: linear-gradient(to bottom, #000000, #5a5555, #000000);
+	border-left:1px solid $blanco;
+	border-right:1px solid $blanco;
+    #vaciar-carrito{
+        margin-top: 2rem;
+        background-color: $negro;
+        border-color: $blanco;
+    }
+    .card{
+        color: $blanco;
+        background-color: $negro;
+        border: 1px solid $blanco;
+        margin: 1px;
+    }
+}
+.myModal-footer{   
+    #cerrar{
+        background-color: rgb(100, 81, 80);
+    }
+    #comprar{
+       background-color: blueviolet;
+    }
+}
